--- a/Project_Heart_Disease_Prediction.ipynb
+++ b/Project_Heart_Disease_Prediction.ipynb
@@ -6,7 +6,7 @@
       "name": "Project: Heart Disease Prediction.ipynb",
       "provenance": [],
       "collapsed_sections": [],
-      "authorship_tag": "ABX9TyMpJTu0G6chONvoCyboJAUN",
+      "authorship_tag": "ABX9TyOleOhBynTOHPZyD7wJ6s1Z",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -31,15 +31,83 @@
     {
       "cell_type": "markdown",
       "source": [
-        "Importing the Dependencies"
+        "# HEART DISEASE PREDICTION\n",
+        "\n"
       ],
       "metadata": {
         "id": "Iu0w78YVzqzN"
       }
     },
     {
+      "cell_type": "markdown",
+      "source": [
+        "**Understanding of Data set**"
+      ],
+      "metadata": {
+        "id": "_OUWRElcOrJR"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "**Context:**"
+      ],
+      "metadata": {
+        "id": "YfUqsMH8OtU-"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "This database contains 76 attributes, but all published experiments refer to using a subset of 14 of them. In particular, the Cleveland database is the only one that has been used by ML researchers to\n",
+        "this date. The \"goal\" field refers to the presence of heart disease in the patient. It is integer valued from 0 (no presence) to 4."
+      ],
+      "metadata": {
+        "id": "lSTvq9HFQSq0"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "**Attributes of Data set:**"
+      ],
+      "metadata": {
+        "id": "W3uaJoklQh0b"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "1. age\n",
+        "2. sex\n",
+        "3. chest pain type (4 values)\n",
+        "4. resting blood pressure\n",
+        "5. serum cholestoral in mg/dl\n",
+        "6. fasting blood sugar > 120 mg/dl\n",
+        "7. resting electrocardiographic results (values 0,1,2)\n",
+        "8. maximum heart rate achieved\n",
+        "9. exercise induced angina\n",
+        "10. oldpeak = ST depression induced by exercise relative to rest\n",
+        "11. the slope of the peak exercise ST segment\n",
+        "12. number of major vessels (0-3) colored by flourosopy\n",
+        "13. thal: 3 = normal; 6 = fixed defect; 7 = reversable defect"
+      ],
+      "metadata": {
+        "id": "aVxm0PyoRgnC"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "**Importing the Dependencies**"
+      ],
+      "metadata": {
+        "id": "MOwU1DHqSFXT"
+      }
+    },
+    {
       "cell_type": "code",
-      "execution_count": 4,
+      "execution_count": null,
       "metadata": {
         "id": "swRd33hmxYh4"
       },
@@ -55,7 +123,7 @@
     {
       "cell_type": "markdown",
       "source": [
-        "Data Collection and Processing"
+        "**Data Collection and Processing**"
       ],
       "metadata": {
         "id": "p4n00E3J1nax"
@@ -70,7 +138,7 @@
       "metadata": {
         "id": "7gI5CKYg0cUt"
       },
-      "execution_count": 5,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -87,7 +155,7 @@
         "id": "hh0v-75L2amf",
         "outputId": "eb4145e2-3ce2-4d01-ab67-0143443ffd9e"
       },
-      "execution_count": 6,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -326,7 +394,7 @@
         "id": "o8ywJ8d12xr1",
         "outputId": "3452a7cf-7455-4a7f-82da-452958d4872d"
       },
-      "execution_count": 8,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -564,7 +632,7 @@
         "id": "m0TQtP243BkM",
         "outputId": "890e46f9-7541-4241-ddbf-52b9e5d4e4a7"
       },
-      "execution_count": 9,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -591,7 +659,7 @@
         "id": "qLMTYx8M3UQr",
         "outputId": "da389418-3bf1-4f64-9a55-7d5937cbf66b"
       },
-      "execution_count": 10,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -635,7 +703,7 @@
         "id": "CFCjrl5X3ouo",
         "outputId": "956c294e-28fa-42c5-a860-25313f17dc48"
       },
-      "execution_count": 11,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -677,7 +745,7 @@
         "id": "UsRyYtiO39G_",
         "outputId": "8574f680-bcc6-4117-fc3b-0ee97b1a1603"
       },
-      "execution_count": 12,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -969,7 +1037,7 @@
         "id": "FwklWiXa4UxP",
         "outputId": "6fc13ba4-aaf7-412b-bad6-6e15ad66c3fb"
       },
-      "execution_count": 15,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -988,9 +1056,9 @@
     {
       "cell_type": "markdown",
       "source": [
-        "1--> Defective Heart\n",
+        "**1--> Defective Heart**\n",
         "\n",
-        "0--> Healthy Heart"
+        "**0-->** **Healthy** **Heart** "
       ],
       "metadata": {
         "id": "ZQ0BuwnK5PkR"
@@ -999,7 +1067,7 @@
     {
       "cell_type": "markdown",
       "source": [
-        "Splitting the Features and Target"
+        "**Splitting the Features and Target**"
       ],
       "metadata": {
         "id": "uKSaeCzP5x0W"
@@ -1014,7 +1082,7 @@
       "metadata": {
         "id": "kcGWaf6C41Tg"
       },
-      "execution_count": 42,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -1029,7 +1097,7 @@
         "id": "iCZJ29Gv6NUb",
         "outputId": "f0ccb62c-ef80-4239-fbde-60cd8839707a"
       },
-      "execution_count": 43,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1065,7 +1133,7 @@
         "id": "7p0uTZyU61yJ",
         "outputId": "0eb37d39-6bb0-4d88-a37f-62fedb353b98"
       },
-      "execution_count": 18,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1090,7 +1158,7 @@
     {
       "cell_type": "markdown",
       "source": [
-        "Splitting the data into Training data & Test data"
+        "**Splitting the data into Training data & Test data**"
       ],
       "metadata": {
         "id": "06NKbl9t7EAv"
@@ -1104,7 +1172,7 @@
       "metadata": {
         "id": "Q80ardL17Pfq"
       },
-      "execution_count": 44,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -1119,7 +1187,7 @@
         "id": "0clr5mSC8Foh",
         "outputId": "84c6afa0-c2bd-4bfe-a76c-b0453db2f83b"
       },
-      "execution_count": 45,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1133,7 +1201,7 @@
     {
       "cell_type": "markdown",
       "source": [
-        "Model Training "
+        "**Model** **Training** "
       ],
       "metadata": {
         "id": "yzvkRStw8cql"
@@ -1142,7 +1210,7 @@
     {
       "cell_type": "markdown",
       "source": [
-        "Logistic Regression"
+        "**Logistic Regression:**"
       ],
       "metadata": {
         "id": "kel99lrh8wc1"
@@ -1156,7 +1224,7 @@
       "metadata": {
         "id": "JmVHDneU8irH"
       },
-      "execution_count": 21,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -1172,7 +1240,7 @@
         "id": "bWRMlO-W9GV1",
         "outputId": "e3b7dc58-cf30-4713-f47c-c38b6a238884"
       },
-      "execution_count": 50,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1203,7 +1271,7 @@
     {
       "cell_type": "markdown",
       "source": [
-        "Model Evaluation"
+        "**Model Evaluation**"
       ],
       "metadata": {
         "id": "ioRu4ivF-Mjs"
@@ -1212,7 +1280,7 @@
     {
       "cell_type": "markdown",
       "source": [
-        "Accuracy Score "
+        "**Accuracy Score:** "
       ],
       "metadata": {
         "id": "RY1mnrR1-Xnh"
@@ -1228,7 +1296,7 @@
       "metadata": {
         "id": "ccRWmeAU-AYt"
       },
-      "execution_count": 47,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -1243,7 +1311,7 @@
         "id": "JGjJf_mVAN8o",
         "outputId": "8e83b4c8-4f2c-4f26-cbf3-ef571ac1dfb2"
       },
-      "execution_count": 36,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1264,7 +1332,7 @@
       "metadata": {
         "id": "VH_Vn3QrAivi"
       },
-      "execution_count": 48,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -1279,7 +1347,7 @@
         "id": "jcVOkiNmBKHh",
         "outputId": "a2383288-617d-40a4-c202-a70ed3065ca2"
       },
-      "execution_count": 38,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1293,7 +1361,7 @@
     {
       "cell_type": "markdown",
       "source": [
-        "Building a Predictive System"
+        "**Building a Predictive System**"
       ],
       "metadata": {
         "id": "M9M_vf0PBuPn"
@@ -1325,7 +1393,7 @@
         "id": "RiHtddvEBVlM",
         "outputId": "03fe7ff2-1eb3-47fe-9846-8e80bd4cac63"
       },
-      "execution_count": 51,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
