--- a/Project_Heart_Disease_Prediction.ipynb
+++ b/Project_Heart_Disease_Prediction.ipynb
@@ -6,7 +6,7 @@
       "name": "Project: Heart Disease Prediction.ipynb",
       "provenance": [],
       "collapsed_sections": [],
-      "authorship_tag": "ABX9TyOleOhBynTOHPZyD7wJ6s1Z",
+      "authorship_tag": "ABX9TyMJ30lV8mB8Bu8r76qDrowZ",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -107,7 +107,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 7,
       "metadata": {
         "id": "swRd33hmxYh4"
       },
@@ -138,7 +138,7 @@
       "metadata": {
         "id": "7gI5CKYg0cUt"
       },
-      "execution_count": null,
+      "execution_count": 8,
       "outputs": []
     },
     {
@@ -153,16 +153,16 @@
           "height": 206
         },
         "id": "hh0v-75L2amf",
-        "outputId": "eb4145e2-3ce2-4d01-ab67-0143443ffd9e"
+        "outputId": "2143f79b-782d-4ac9-b7c9-7c9f6c909e79"
       },
-      "execution_count": null,
+      "execution_count": 9,
       "outputs": [
         {
           "output_type": "execute_result",
           "data": {
             "text/html": [
               "\n",
-              "  <div id=\"df-695cb53b-2de1-4fc5-acbd-54b7a402f0bd\">\n",
+              "  <div id=\"df-176e06af-f205-4c16-8319-d3ebbf9d624f\">\n",
               "    <div class=\"colab-df-container\">\n",
               "      <div>\n",
               "<style scoped>\n",
@@ -287,7 +287,7 @@
               "  </tbody>\n",
               "</table>\n",
               "</div>\n",
-              "      <button class=\"colab-df-convert\" onclick=\"convertToInteractive('df-695cb53b-2de1-4fc5-acbd-54b7a402f0bd')\"\n",
+              "      <button class=\"colab-df-convert\" onclick=\"convertToInteractive('df-176e06af-f205-4c16-8319-d3ebbf9d624f')\"\n",
               "              title=\"Convert this dataframe to an interactive table.\"\n",
               "              style=\"display:none;\">\n",
               "        \n",
@@ -338,12 +338,12 @@
               "\n",
               "      <script>\n",
               "        const buttonEl =\n",
-              "          document.querySelector('#df-695cb53b-2de1-4fc5-acbd-54b7a402f0bd button.colab-df-convert');\n",
+              "          document.querySelector('#df-176e06af-f205-4c16-8319-d3ebbf9d624f button.colab-df-convert');\n",
               "        buttonEl.style.display =\n",
               "          google.colab.kernel.accessAllowed ? 'block' : 'none';\n",
               "\n",
               "        async function convertToInteractive(key) {\n",
-              "          const element = document.querySelector('#df-695cb53b-2de1-4fc5-acbd-54b7a402f0bd');\n",
+              "          const element = document.querySelector('#df-176e06af-f205-4c16-8319-d3ebbf9d624f');\n",
               "          const dataTable =\n",
               "            await google.colab.kernel.invokeFunction('convertToInteractive',\n",
               "                                                     [key], {});\n",
@@ -376,7 +376,7 @@
             ]
           },
           "metadata": {},
-          "execution_count": 6
+          "execution_count": 9
         }
       ]
     },
@@ -392,16 +392,16 @@
           "height": 206
         },
         "id": "o8ywJ8d12xr1",
-        "outputId": "3452a7cf-7455-4a7f-82da-452958d4872d"
+        "outputId": "bf736213-83d8-4dc4-9624-041079cadc8c"
       },
-      "execution_count": null,
+      "execution_count": 10,
       "outputs": [
         {
           "output_type": "execute_result",
           "data": {
             "text/html": [
               "\n",
-              "  <div id=\"df-6c7fe80b-392f-4243-b6ed-2d0b0be8c769\">\n",
+              "  <div id=\"df-dd73b3d5-07ef-4920-9f50-37d4e7667f3f\">\n",
               "    <div class=\"colab-df-container\">\n",
               "      <div>\n",
               "<style scoped>\n",
@@ -526,7 +526,7 @@
               "  </tbody>\n",
               "</table>\n",
               "</div>\n",
-              "      <button class=\"colab-df-convert\" onclick=\"convertToInteractive('df-6c7fe80b-392f-4243-b6ed-2d0b0be8c769')\"\n",
+              "      <button class=\"colab-df-convert\" onclick=\"convertToInteractive('df-dd73b3d5-07ef-4920-9f50-37d4e7667f3f')\"\n",
               "              title=\"Convert this dataframe to an interactive table.\"\n",
               "              style=\"display:none;\">\n",
               "        \n",
@@ -577,12 +577,12 @@
               "\n",
               "      <script>\n",
               "        const buttonEl =\n",
-              "          document.querySelector('#df-6c7fe80b-392f-4243-b6ed-2d0b0be8c769 button.colab-df-convert');\n",
+              "          document.querySelector('#df-dd73b3d5-07ef-4920-9f50-37d4e7667f3f button.colab-df-convert');\n",
               "        buttonEl.style.display =\n",
               "          google.colab.kernel.accessAllowed ? 'block' : 'none';\n",
               "\n",
               "        async function convertToInteractive(key) {\n",
-              "          const element = document.querySelector('#df-6c7fe80b-392f-4243-b6ed-2d0b0be8c769');\n",
+              "          const element = document.querySelector('#df-dd73b3d5-07ef-4920-9f50-37d4e7667f3f');\n",
               "          const dataTable =\n",
               "            await google.colab.kernel.invokeFunction('convertToInteractive',\n",
               "                                                     [key], {});\n",
@@ -615,7 +615,7 @@
             ]
           },
           "metadata": {},
-          "execution_count": 8
+          "execution_count": 10
         }
       ]
     },
@@ -630,9 +630,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "m0TQtP243BkM",
-        "outputId": "890e46f9-7541-4241-ddbf-52b9e5d4e4a7"
+        "outputId": "f92f64b6-6873-4ae4-b0fe-91cd3ed0096d"
       },
-      "execution_count": null,
+      "execution_count": 11,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -642,7 +642,7 @@
             ]
           },
           "metadata": {},
-          "execution_count": 9
+          "execution_count": 11
         }
       ]
     },
@@ -657,9 +657,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "qLMTYx8M3UQr",
-        "outputId": "da389418-3bf1-4f64-9a55-7d5937cbf66b"
+        "outputId": "91286d72-287a-46c4-ce54-ddaa7a93310f"
       },
-      "execution_count": null,
+      "execution_count": 12,
       "outputs": [
         {
           "output_type": "stream",
@@ -701,9 +701,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "CFCjrl5X3ouo",
-        "outputId": "956c294e-28fa-42c5-a860-25313f17dc48"
+        "outputId": "5666bdb4-e9f3-4031-f8cf-bb249596584e"
       },
-      "execution_count": null,
+      "execution_count": 13,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -727,7 +727,7 @@
             ]
           },
           "metadata": {},
-          "execution_count": 11
+          "execution_count": 13
         }
       ]
     },
@@ -743,16 +743,16 @@
           "height": 364
         },
         "id": "UsRyYtiO39G_",
-        "outputId": "8574f680-bcc6-4117-fc3b-0ee97b1a1603"
+        "outputId": "ebbe4e4f-2ce5-4134-89f3-79f425fde9c0"
       },
-      "execution_count": null,
+      "execution_count": 14,
       "outputs": [
         {
           "output_type": "execute_result",
           "data": {
             "text/html": [
               "\n",
-              "  <div id=\"df-62b03e57-856b-4645-85d2-85d47178b183\">\n",
+              "  <div id=\"df-462044eb-61d3-464f-8153-3e4ba51d199b\">\n",
               "    <div class=\"colab-df-container\">\n",
               "      <div>\n",
               "<style scoped>\n",
@@ -928,7 +928,7 @@
               "  </tbody>\n",
               "</table>\n",
               "</div>\n",
-              "      <button class=\"colab-df-convert\" onclick=\"convertToInteractive('df-62b03e57-856b-4645-85d2-85d47178b183')\"\n",
+              "      <button class=\"colab-df-convert\" onclick=\"convertToInteractive('df-462044eb-61d3-464f-8153-3e4ba51d199b')\"\n",
               "              title=\"Convert this dataframe to an interactive table.\"\n",
               "              style=\"display:none;\">\n",
               "        \n",
@@ -979,12 +979,12 @@
               "\n",
               "      <script>\n",
               "        const buttonEl =\n",
-              "          document.querySelector('#df-62b03e57-856b-4645-85d2-85d47178b183 button.colab-df-convert');\n",
+              "          document.querySelector('#df-462044eb-61d3-464f-8153-3e4ba51d199b button.colab-df-convert');\n",
               "        buttonEl.style.display =\n",
               "          google.colab.kernel.accessAllowed ? 'block' : 'none';\n",
               "\n",
               "        async function convertToInteractive(key) {\n",
-              "          const element = document.querySelector('#df-62b03e57-856b-4645-85d2-85d47178b183');\n",
+              "          const element = document.querySelector('#df-462044eb-61d3-464f-8153-3e4ba51d199b');\n",
               "          const dataTable =\n",
               "            await google.colab.kernel.invokeFunction('convertToInteractive',\n",
               "                                                     [key], {});\n",
@@ -1020,7 +1020,7 @@
             ]
           },
           "metadata": {},
-          "execution_count": 12
+          "execution_count": 14
         }
       ]
     },
@@ -1035,9 +1035,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "FwklWiXa4UxP",
-        "outputId": "6fc13ba4-aaf7-412b-bad6-6e15ad66c3fb"
+        "outputId": "8532a051-2a0c-45a6-96bf-f922a39974f4"
       },
-      "execution_count": null,
+      "execution_count": 15,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1082,7 +1082,7 @@
       "metadata": {
         "id": "kcGWaf6C41Tg"
       },
-      "execution_count": null,
+      "execution_count": 16,
       "outputs": []
     },
     {
@@ -1095,9 +1095,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "iCZJ29Gv6NUb",
-        "outputId": "f0ccb62c-ef80-4239-fbde-60cd8839707a"
+        "outputId": "7db22d65-9f69-4ce1-c881-6953784b3c9b"
       },
-      "execution_count": null,
+      "execution_count": 17,
       "outputs": [
         {
           "output_type": "stream",
@@ -1131,9 +1131,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "7p0uTZyU61yJ",
-        "outputId": "0eb37d39-6bb0-4d88-a37f-62fedb353b98"
+        "outputId": "e4468f3c-7310-4a2c-c874-4fa68a3c2964"
       },
-      "execution_count": null,
+      "execution_count": 18,
       "outputs": [
         {
           "output_type": "stream",
@@ -1172,7 +1172,7 @@
       "metadata": {
         "id": "Q80ardL17Pfq"
       },
-      "execution_count": null,
+      "execution_count": 19,
       "outputs": []
     },
     {
@@ -1185,9 +1185,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "0clr5mSC8Foh",
-        "outputId": "84c6afa0-c2bd-4bfe-a76c-b0453db2f83b"
+        "outputId": "52954f1a-502d-4602-fc81-08a60225161c"
       },
-      "execution_count": null,
+      "execution_count": 20,
       "outputs": [
         {
           "output_type": "stream",
@@ -1224,7 +1224,7 @@
       "metadata": {
         "id": "JmVHDneU8irH"
       },
-      "execution_count": null,
+      "execution_count": 21,
       "outputs": []
     },
     {
@@ -1238,9 +1238,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "bWRMlO-W9GV1",
-        "outputId": "e3b7dc58-cf30-4713-f47c-c38b6a238884"
+        "outputId": "2cc582b6-7052-40d0-c451-28c1b2258228"
       },
-      "execution_count": null,
+      "execution_count": 22,
       "outputs": [
         {
           "output_type": "stream",
@@ -1264,7 +1264,7 @@
             ]
           },
           "metadata": {},
-          "execution_count": 50
+          "execution_count": 22
         }
       ]
     },
@@ -1290,13 +1290,13 @@
       "cell_type": "code",
       "source": [
         "# accuracy on training data\n",
-        "X_train_prediction = model.predict(X_train)\n",
-        "training_data_accuracy = accuracy_score(X_train_prediction, Y_train) "
+        "X_train_prediction = model.predict(X_train.values)\n",
+        "training_data_accuracy = accuracy_score(X_train_prediction, Y_train)"
       ],
       "metadata": {
         "id": "ccRWmeAU-AYt"
       },
-      "execution_count": null,
+      "execution_count": 24,
       "outputs": []
     },
     {
@@ -1309,9 +1309,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "JGjJf_mVAN8o",
-        "outputId": "8e83b4c8-4f2c-4f26-cbf3-ef571ac1dfb2"
+        "outputId": "45dc804c-eff2-4304-b540-7abb2c50ed78"
       },
-      "execution_count": null,
+      "execution_count": 25,
       "outputs": [
         {
           "output_type": "stream",
@@ -1326,13 +1326,13 @@
       "cell_type": "code",
       "source": [
         "# accuracy on test data\n",
-        "X_test_prediction = model.predict(X_test)\n",
+        "X_test_prediction = model.predict(X_test.values)\n",
         "test_data_accuracy = accuracy_score(X_test_prediction, Y_test) "
       ],
       "metadata": {
         "id": "VH_Vn3QrAivi"
       },
-      "execution_count": null,
+      "execution_count": 27,
       "outputs": []
     },
     {
@@ -1345,9 +1345,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "jcVOkiNmBKHh",
-        "outputId": "a2383288-617d-40a4-c202-a70ed3065ca2"
+        "outputId": "dff7b27c-c3a0-4a0c-9e40-486f611b3df3"
       },
-      "execution_count": null,
+      "execution_count": 28,
       "outputs": [
         {
           "output_type": "stream",
@@ -1366,6 +1366,44 @@
       "metadata": {
         "id": "M9M_vf0PBuPn"
       }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "input_data = (67,1,0,120,229,0,0,129,1,2.6,1,2,3)\n",
+        "\n",
+        "# change the input data to a numpy array\n",
+        "input_data_as_numpy_array = np.asarray(input_data)\n",
+        "\n",
+        "# reshape the numpy array as we are predicting for only on instance\n",
+        "input_data_reshaped = input_data_as_numpy_array.reshape(1,-1)\n",
+        "\n",
+        "prediction = model.predict(input_data_reshaped)\n",
+        "print(prediction)\n",
+        "\n",
+        "if(prediction[0]== 0):\n",
+        "  print('The person does not have a Heart Disease')\n",
+        "else:\n",
+        "    print('The person has Heart Disease')"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "RiHtddvEBVlM",
+        "outputId": "2bf4a13a-6297-4fda-e08b-1aad51a3c4d9"
+      },
+      "execution_count": 29,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "[0]\n",
+            "The person does not have a Heart Disease\n"
+          ]
+        }
+      ]
     },
     {
       "cell_type": "code",
@@ -1390,10 +1428,10 @@
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "id": "RiHtddvEBVlM",
-        "outputId": "03fe7ff2-1eb3-47fe-9846-8e80bd4cac63"
+        "id": "unundPJWUvbS",
+        "outputId": "ac6c2b07-e886-4dae-e6ee-b0a210c35b31"
       },
-      "execution_count": null,
+      "execution_count": 30,
       "outputs": [
         {
           "output_type": "stream",
@@ -1404,6 +1442,17 @@
           ]
         }
       ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        ""
+      ],
+      "metadata": {
+        "id": "ChtPJL1tWdFo"
+      },
+      "execution_count": null,
+      "outputs": []
     }
   ]
 }
